# cryptolizard

./: .gitignore  QUICKSTART.md  README.md  TROUBLESHOOTING.md  render.yaml
backend/: .dockerignore  CMakeLists.txt  Dockerfile  crypto_server.cpp
frontend/: coin-info.json  index.html  script.js  styles.css
